--- a/frontend-vue/src/style.css
+++ b/frontend-vue/src/style.css
@@ -4,7 +4,7 @@
     --dark-green-icon: #0F292D;
     --light-green-icon: #2EB078;
     --normal-blue-icon: #005ED4;
-
+    scroll-behavior: smooth;
     font-family: 'Proxima Nova', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
