--- a/frontend-vue/src/style.css
+++ b/frontend-vue/src/style.css
@@ -1,34 +1,37 @@
 @import "tailwindcss";
 
 :root {
-  font-family: 'Proxima Nova',system-ui, Avenir, Helvetica, Arial, sans-serif;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: 'Proxima Nova', system-ui, Avenir, Helvetica, Arial, sans-serif;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-.gradient {
-	width: 100%;
-	height: 100%;
-	background: linear-gradient(334deg, #ffffff, #ffffff, #75e98e);
-	background-size: 180% 180%;
-	animation: gradient-animation 6s ease infinite;
+.blob {
+    border-radius: 50%;
+    opacity: 0.3;
+    animation-name: floatBlob;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    position: absolute;
+    filter: blur(4px);
 }
 
-@keyframes gradient-animation {
-	0% {
-		background-position: 0% 50%;
-	}
+@keyframes floatBlob {
+    0% {
+        transform: translate(0px, 0px) scale(1);
+    }
 
-	50% {
-		background-position: 100% 50%;
-	}
+    50% {
+        transform: translate(30px, -30px) scale(1.1);
+    }
 
-	100% {
-		background-position: 0% 50%;
-	}
+    100% {
+        transform: translate(0px, 0px) scale(1);
+    }
 }
+
 
 @font-face {
     font-family: "PPGoshaSans";
@@ -73,5 +76,5 @@
 }
 
 @theme {
-  --font-ppgosha: "PPGoshaSans"; 
+    --font-ppgosha: "PPGoshaSans";
 }
