feat: improve mentor and issue management, including updates and file uploads

--- a/frontend-vue/src/style.css
+++ b/frontend-vue/src/style.css
@@ -100,24 +100,27 @@
 }
 
 .Vue-Toastification__toast.my-custom-toast-class .Vue-Toastification__close-button {
-  @apply text-black font-extrabold text-xl ml-2 bg-white border-2 border-black w-6 rounded-full h-6 flex items-center justify-center pr-2.5;
-  filter: drop-shadow(2px 2px 0 #ff3c00);
+    @apply text-black font-extrabold text-xl ml-2 bg-white border-2 border-black w-6 rounded-full h-6 flex items-center justify-center pr-2.5;
+    filter: drop-shadow(2px 2px 0 #ff3c00);
 }
 
 .loader {
-  width: fit-content;
-  font-size: 40px;
-  font-family: system-ui,sans-serif;
-  font-weight: bold;
-  text-transform: uppercase;
-  color: #0000;
-  -webkit-text-stroke: 1px #000;
-  background: conic-gradient(#000 0 0) 0/0% 100% no-repeat text;
-  animation: l1 1s linear infinite;
+    width: 48px;
+    height: 48px;
+    border: 5px solid #000000;
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
 }
-.loader:before {
-  content: "Loading";
-}
-@keyframes l1 {
-  to{background-size: 120% 100%}
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
